b3-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b3-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b3-api
  template:
    metadata:
      labels:
        app: b3-api
    spec:
      containers:
        - name: b3-api-containers
          image: southamerica-east1-docker.pkg.dev/b3-api-346602/b3-api-repository/b3-api
          ports:
            - containerPort: 4000
