b3-api-pod.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: b3-api-pod
  labels: 
    app: b3-api
spec:
  containers:
    - name: b3-api-containers
      image: us-west1-docker.pkg.dev/projeto-estudos-344512/b3-api-repository/b3-api
      ports:
      - name: http
        containerPort: 4000
