b3-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: b3-api-service
spec:
  selector:
    app: b3-api
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: 4000
